--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,12 +1,11 @@
-$color_1: #2c3a41;
-$color_2: #fafafa;
-$color_3: white;
+$color_1: #333;
+$color_2: #2c3a41;
+$color_3: #fafafa;
+$color_4: white;
 $background-color_1: #eee;
 $background-color_2: #e6e6e6;
 $background-color_3: #525252;
-$background-color_4: black;
-$background-color_5: #505050;
-$background-color_6: #405061;
+$background-color_4: #405061;
 
 /* HeroesComponent's private CSS styles */
 .heroes {
@@ -15,54 +14,45 @@ $background-color_6: #405061;
   padding: 0;
   width: 15em;
   li {
-    display: flex;
-  }
-  button {
-    flex: 1;
-    cursor: pointer;
     position: relative;
-    left: 0;
+    cursor: pointer;
+    &:hover {
+      left: 0.1em;
+    }
+  }
+  a {
+    color: $color_1;
+    text-decoration: none;
     background-color: $background-color_1;
     margin: 0.5em;
-    padding: 0;
+    padding: 0.3em 0;
+    height: 1.6em;
     border-radius: 4px;
-    display: flex;
-    align-items: stretch;
-    height: 1.8em;
-    border: 0;
+    display: block;
+    width: 100%;
     &:hover {
-      color: $color_1;
+      color: $color_2;
       background-color: $background-color_2;
-      left: 0.1em;
     }
     &:active {
       background-color: $background-color_3;
-      color: $color_2;
-    }
-  }
-  button.selected {
-    background-color: $background-color_4;
-    color: $color_3;
-    &:hover {
-      background-color: $background-color_5;
-      color: $color_3;
-    }
-    &:active {
-      background-color: $background-color_4;
       color: $color_3;
     }
   }
   .badge {
     display: inline-block;
     font-size: small;
-    color: $color_3;
-    padding: 0.5em 0.7em 0 0.7em;
-    background-color: $background-color_6;
+    color: $color_4;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: $background-color_4;
     line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    min-width: 16px;
+    text-align: right;
     margin-right: 0.8em;
     border-radius: 4px 0 0 4px;
-  }
-  .name {
-    align-self: center;
   }
 }
